--- a/.env
+++ b/.env
@@ -1,4 +1,4 @@
-FLASK_APP=app.py
+FLASK_APP=manage.py
 FLASK_ENV=development
 
 DATABASE_URL="postgresql://postgres:postgres@localhost:5432/midtrans_ws"
